049_rot_matrix/grade.txt
Grading at 09/25/2021:23:15:13.056075
For commit ID 97cb0533b9301c0c4dc6c1ecfe1285478693c815
Grading at Sat Sep 25 19:15:12 EDT 2021
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘rotate’:
rotateMatrix.c:7:10: error: unused variable ‘i’ [-Werror=unused-variable]
   size_t i = 0;
          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
